--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,7 @@ celerybeat.pid
 .env
 .venv
 env/
+env2/
 venv/
 ENV/
 env.bak/
@@ -248,3 +249,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,linux,macos
+
+app/__pycache__/
